Fix notes layout and overflow. NotePreview shows partial text preview if it's long

--- a/assets/css/apps/note/cmps/NoteList.css
+++ b/assets/css/apps/note/cmps/NoteList.css
@@ -1,6 +1,7 @@
 .note-list ul {
     display: grid;
     grid-template-columns: repeat(auto-fit, 238px);
+    grid-auto-flow: dense;
     gap: 20px;
     justify-content: center;
 
@@ -11,13 +12,9 @@
 
 .note-list li {
     position: relative;
-    /* display: flex; */
-    /* flex-direction: column; */
+    /* display: flex;
+    flex-direction: column; */
     /* justify-content: space-between; */
-    /* background-color: antiquewhite; */
-
-    /* max-width: 500px; */
-    /* margin: 0 auto; */
 
     list-style: none;
     border: 1px solid #e0e0e0;
@@ -25,11 +22,9 @@
     padding: 0.75em 1em;
     line-height: 1.25rem;
     letter-spacing: .01428571em;
-}
 
-.note-list li > * {
-    overflow: hidden;
-
+    height: max-content;
+    /* width: 238px; */
 }
 
 .note-list li:hover {
